apps/generic/overlays/goaly/patches/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goaly
spec:
  template:
    spec:
      containers:
        - name: container
          image: ghcr.io/gandazgul/goaly:dev
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /data
              subPath: configs/goaly/
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
