apps/generic/overlays/goaly/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: goaly
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
